added missing file to compile ctulimit

--- a/configure.ac
+++ b/configure.ac
@@ -888,6 +888,7 @@ AC_CONFIG_FILES([Makefile
                  src/ctcubemask/Makefile
                  src/cttsmap/Makefile
                  src/ctbutterfly/Makefile
+                 src/ctulimit/Makefile
                  src/support/Makefile
                  src/ctools-setup
                  test/Makefile
