--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,14 +2,21 @@
 
 # Scripts to be distributed
 scripts = README \
-          pipeline_stacked_mem.py \
-          make_binned_analysis.py \
+          benchmark_cta_analysis.py \
           make_pull_at_sensitivity_limit.py \
+          make_spectrum.py \
           make_ts_distributions.py \
-          make_unbinned_analysis.py \
+          pipeline_binned_disk.py \
+          pipeline_binned_mem.py \
+          pipeline_stacked_disk.py \
+          pipeline_stacked_mem.py \
+          pipeline_unbinned_disk.py \
+          pipeline_unbinned_mem.py \
+          show_butterfly.py \
+          show_pha.py \
+          show_response.py \
           show_pull_histogram.py \
-          show_ts_distribution.py \
-          show_butterfly.py
+          show_ts_distribution.py
 
 # Set directories
 scriptsdir   = $(datadir)/examples/python
