Adapt scripts to example folder

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -3,8 +3,10 @@
 # Scripts to be distributed
 scripts = README \
           benchmark_cta_analysis.py \
+          check_models.py \
           make_pull_at_sensitivity_limit.py \
           make_spectrum.py \
+          make_survey.py \
           make_ts_distributions.py \
           pipeline_binned_disk.py \
           pipeline_binned_mem.py \
