--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -249,3 +249,64 @@ else
 fi
 $ECHO " ok"
 
+#
+# Test cslightcrv
+# ===========
+$ECHO -n "Test cslightcrv: "
+chmod +x @abs_top_srcdir@/scripts/cslightcrv.py
+@abs_top_srcdir@/scripts/cslightcrv.py \
+  inobs="data/crab_events.fits" \
+  inmodel="data/crab.xml" \
+  caldb="irf" \
+  irf="cta_dummy_irf" \
+  tbins=3 \
+  tmin=51544.5 \
+  tmax=51544.53 \
+  srcname="Crab" \
+  tbinalg="LIN" \
+  binned=no \
+  outfile="lightcurve.fits" > cslightcrv.log
+$ECHO -n "."
+if [ -s "lightcurve.fits" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " lightcurve.fits file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
+#
+# Test cslightcrv Run2
+# ================
+$ECHO -n "Test cslightcrv: "
+chmod +x @abs_top_srcdir@/scripts/cslightcrv.py
+@abs_top_srcdir@/scripts/cslightcrv.py \
+  inobs="data/crab_events.fits" \
+  inmodel="data/crab.xml" \
+  caldb="irf" \
+  irf="cta_dummy_irf" \
+  tbinalg="GTI" \
+  srcname="Crab" \
+  emin=0.1 \
+  emax=100.0 \
+  binned=yes \
+  nxpix=10 \
+  nypix=10 \
+  binsz=0.1 \
+  nebins=2 \
+  coordsys="CEL" \
+  xref=83.63 \
+  yref=22.01 \
+  proj="CAR" \
+  outfile="lightcurve.fits" > cslightcrv.log
+$ECHO -n "."
+if [ -s "lightcurve.fits" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " lightcurve.fits file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
