Install cscripts in the ctools Python module.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -7,8 +7,7 @@ binscripts = cta_kb_bkgrates.py cta_root2irf.py cta_make_nodes.py \
 # Scripts to be distributed in pythondir
 pythonscripts = cspull.py cssens.py cstsdist.py cscaldb.py csresmap.py cshessobs.py \
                 csobsdef.py csspec.py cslightcrv.py \
-                lsmodel.py \
-				obsutils.py
+                lsmodel.py
 
 # Scripts for which symbolic links will be created in bindir
 linkscripts = cspull cssens cstsdist cscaldb csresmap \
@@ -19,7 +18,7 @@ linkscripts = cspull cssens cstsdist cscaldb csresmap \
 EXTRA_DIST         = $(binscripts) $(pythonscripts)
 binscriptsdir      = $(bindir)
 binscripts_DATA    = $(binscripts)
-pythonscriptsdir   = $(pythondir)
+pythonscriptsdir   = $(pythondir)/ctools
 pythonscripts_DATA = $(pythonscripts)
 
 # Add hook rule to create symbolic links for cscripts
@@ -31,7 +30,7 @@ install-data-hook:
 	@linklist='$(linkscripts)';\
 	for p in $$linklist; do \
       rm -rf "$(DESTDIR)$(bindir)/$$p"; \
-      ln -s "$(DESTDIR)$(pythondir)/$$p.py" "$(DESTDIR)$(bindir)/$$p"; \
-	  chmod +x "$(DESTDIR)$(pythondir)/$$p.py"; \
+      ln -s "$(DESTDIR)$(pythondir)/ctools/$$p.py" "$(DESTDIR)$(bindir)/$$p"; \
+	  chmod +x "$(DESTDIR)$(pythondir)/ctools/$$p.py"; \
 	done
     
