--- a/src/cterror/Makefile.am
+++ b/src/cterror/Makefile.am
@@ -9,10 +9,15 @@ bin_PROGRAMS = cterror
 # Sources
 sources = cterror.cpp
 
+# Libtool library
+noinst_LTLIBRARIES = libcterror.la
+libcterror_la_SOURCES = $(sources)
+
 # Program definition
 cterror_SOURCES = main.cpp
 cterror_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 cterror_CPPFLAGS = @CPPFLAGS@
+cterror_LDADD = libcterror.la $(top_srcdir)/src/support/libsupport.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
