--- a/configure.ac
+++ b/configure.ac
@@ -890,6 +890,7 @@ AC_CONFIG_FILES([Makefile
                  src/cttsmap/Makefile
                  src/ctbutterfly/Makefile
                  src/ctulimit/Makefile
+                 src/cterror/Makefile
                  src/support/Makefile
                  src/ctools-setup
                  test/Makefile
