Update Change log, News and ctools version number.

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ src/ctbkgcube/ctbkgcube
 src/ctcubemask/ctcubemask
 src/ctbutterfly/ctbutterfly
 src/ctulimit/ctulimit
+src/cterror/cterror
 test/pfiles/
 test/*.fits
 test/*.dat
