Remove analysisutils and plotutils from distribution.

--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -121,8 +121,7 @@ setup(name='@PACKAGE_NAME@',
       author='Juergen Knoedlseder',
       author_email='@PACKAGE_BUGREPORT@',
       url='http://gammalib.sourceforge.net/',
-      py_modules=['ctools.tools', 'ctools.obsutils', 'ctools.analysisutils',
-                  'ctools.plotutils'],
+      py_modules=['ctools.tools', 'ctools.obsutils'],
       ext_modules=[Extension('ctools._tools', ['ctools/tools_wrap.cpp'],
                              include_dirs=include_dirs,
                              library_dirs=library_dirs,
