Modified ctmodel following the discussions on #1439. In addition, csresmap was also modified consistently, csresmap can now also take two maps (cnt and model) as input and compute the residuals directly. The algorithm parameter has been made unhidden

--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -182,7 +182,8 @@ chmod +x @abs_top_srcdir@/scripts/csresmap.py
   xref=83.63 \
   yref=22.01 \
   proj="CAR" \
-  binsz=0.05 > csresmap.log
+  binsz=0.05 \
+  algorithm="SUBDIV" > csresmap.log
 $ECHO -n "."
 if [ -s "resmap.fits" ]
 then
