Use cscripts obsutils and create cscripts module.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -5,21 +5,22 @@ binscripts = cta_kb_bkgrates.py cta_root2irf.py cta_make_nodes.py \
              tsmerge.py
 
 # Scripts to be distributed in pythondir
-pythonscripts = cspull.py cssens.py cstsdist.py cscaldb.py csresmap.py \
+pythonscripts = __init__.py \
+                cspull.py cssens.py cstsdist.py cscaldb.py csresmap.py \
                 cshessobs.py csobsdef.py csspec.py cslightcrv.py \
                 csinfo.py \
-                lsmodel.py
+                obsutils.py
 
 # Scripts for which symbolic links will be created in bindir
 linkscripts = cspull cssens cstsdist cscaldb csresmap \
               cshessobs csobsdef csspec cslightcrv \
-              csinfo lsmodel
+              csinfo
 
 # Distribute scripts
 EXTRA_DIST         = $(binscripts) $(pythonscripts)
 binscriptsdir      = $(bindir)
 binscripts_DATA    = $(binscripts)
-pythonscriptsdir   = $(pythondir)/ctools
+pythonscriptsdir   = $(pythondir)/cscripts
 pythonscripts_DATA = $(pythonscripts)
 
 # Add hook rule to create symbolic links for cscripts
@@ -31,7 +32,7 @@ install-data-hook:
 	@linklist='$(linkscripts)';\
 	for p in $$linklist; do \
       rm -rf "$(DESTDIR)$(bindir)/$$p"; \
-      ln -s "$(DESTDIR)$(pythondir)/ctools/$$p.py" "$(DESTDIR)$(bindir)/$$p"; \
-	  chmod +x "$(DESTDIR)$(pythondir)/ctools/$$p.py"; \
+      ln -s "$(DESTDIR)$(pythondir)/cscripts/$$p.py" "$(DESTDIR)$(bindir)/$$p"; \
+	  chmod +x "$(DESTDIR)$(pythondir)/cscripts/$$p.py"; \
 	done
     
