Only install tsmerge.py in bin directory.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,8 +1,9 @@
 ## Process this file with automake to produce Makefile.in
 
 # Scripts to be distributed in bindir
-binscripts = cta_kb_bkgrates.py cta_root2irf.py cta_make_nodes.py \
-             tsmerge.py
+#binscripts = cta_kb_bkgrates.py cta_root2irf.py cta_make_nodes.py \
+#             tsmerge.py
+binscripts = tsmerge.py
 
 # Scripts to be distributed in pythondir
 pythonscripts = __init__.py \
