--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -52,8 +52,8 @@ export PFILES=pfiles
 # Test csobsdef
 # =============
 $ECHO -n "Test csobsdef: "
-chmod +x @abs_top_srcdir@/scripts/csobsdef.py
-@abs_top_srcdir@/scripts/csobsdef.py \
+chmod +x @abs_top_srcdir@/cscripts/csobsdef.py
+@abs_top_srcdir@/cscripts/csobsdef.py \
   inpnt="data/pntdef.dat" \
   outobs="obs.xml" \
   caldb="irf" \
@@ -77,8 +77,8 @@ $ECHO " ok"
 # Test cspull
 # ===========
 $ECHO -n "Test cspull: "
-chmod +x @abs_top_srcdir@/scripts/cspull.py
-@abs_top_srcdir@/scripts/cspull.py \
+chmod +x @abs_top_srcdir@/cscripts/cspull.py
+@abs_top_srcdir@/cscripts/cspull.py \
   inmodel="data/crab.xml" \
   outfile="pull.dat" \
   ntrials="3" \
@@ -110,8 +110,8 @@ $ECHO " ok"
 # Test cssens
 # ===========
 $ECHO -n "Test cssens: "
-chmod +x @abs_top_srcdir@/scripts/cssens.py
-@abs_top_srcdir@/scripts/cssens.py \
+chmod +x @abs_top_srcdir@/cscripts/cssens.py
+@abs_top_srcdir@/cscripts/cssens.py \
   inmodel="data/crab.xml" \
   srcname="Crab" \
   caldb="irf" \
@@ -136,8 +136,8 @@ $ECHO " ok"
 # Test cstsdist
 # =============
 $ECHO -n "Test cstsdist: "
-chmod +x @abs_top_srcdir@/scripts/cstsdist.py
-@abs_top_srcdir@/scripts/cstsdist.py \
+chmod +x @abs_top_srcdir@/cscripts/cstsdist.py
+@abs_top_srcdir@/cscripts/cstsdist.py \
   inmodel="data/crab.xml" \
   srcname="Crab" \
   outfile="ts.dat" \
@@ -168,8 +168,8 @@ $ECHO " ok"
 # Test csresmap
 # =============
 $ECHO -n "Test csresmap: "
-chmod +x @abs_top_srcdir@/scripts/csresmap.py
-@abs_top_srcdir@/scripts/csresmap.py \
+chmod +x @abs_top_srcdir@/cscripts/csresmap.py
+@abs_top_srcdir@/cscripts/csresmap.py \
   inobs="data/crab_events.fits" \
   outmap="resmap.fits" \
   inmodel="data/crab.xml" \
@@ -199,8 +199,8 @@ $ECHO " ok"
 # Test csspec (unbinned)
 # =====================
 $ECHO -n "Test csspec (unbinned): "
-chmod +x @abs_top_srcdir@/scripts/csspec.py
-@abs_top_srcdir@/scripts/csspec.py \
+chmod +x @abs_top_srcdir@/cscripts/csspec.py
+@abs_top_srcdir@/cscripts/csspec.py \
   inobs="data/crab_events.fits" \
   inmodel="data/crab.xml" \
   caldb="irf" \
@@ -226,8 +226,8 @@ $ECHO " ok"
 # Test csspec (binned)
 # ====================
 $ECHO -n "Test csspec (binned): "
-chmod +x @abs_top_srcdir@/scripts/csspec.py
-@abs_top_srcdir@/scripts/csspec.py \
+chmod +x @abs_top_srcdir@/cscripts/csspec.py
+@abs_top_srcdir@/cscripts/csspec.py \
   inobs="data/crab_events.fits" \
   inmodel="data/crab.xml" \
   caldb="irf" \
@@ -261,8 +261,8 @@ $ECHO " ok"
 # Test cslightcrv (unbinned)
 # ==========================
 $ECHO -n "Test cslightcrv (unbinned): "
-chmod +x @abs_top_srcdir@/scripts/cslightcrv.py
-@abs_top_srcdir@/scripts/cslightcrv.py \
+chmod +x @abs_top_srcdir@/cscripts/cslightcrv.py
+@abs_top_srcdir@/cscripts/cslightcrv.py \
   inobs="data/crab_events.fits" \
   inmodel="data/crab.xml" \
   srcname="Crab" \
@@ -291,8 +291,8 @@ $ECHO " ok"
 # Test cslightcrv (binned)
 # ========================
 $ECHO -n "Test cslightcrv (binned): "
-chmod +x @abs_top_srcdir@/scripts/cslightcrv.py
-@abs_top_srcdir@/scripts/cslightcrv.py \
+chmod +x @abs_top_srcdir@/cscripts/cslightcrv.py
+@abs_top_srcdir@/cscripts/cslightcrv.py \
   inobs="data/crab_events.fits" \
   inmodel="data/crab.xml" \
   srcname="Crab" \
