--- a/pyext/Makefile.am
+++ b/pyext/Makefile.am
@@ -30,13 +30,36 @@
 if WITH_PYTHON
 
 # Test scripts to be distributed in $(pythondir)/ctools/tests
-testscripts = ctools/tests/__init__.py \
-              ctools/tests/unbinned.py
+testscripts = $(abs_top_srcdir)/test/test_python.py \
+              $(abs_top_srcdir)/test/test_ctobssim.py \
+              $(abs_top_srcdir)/test/test_ctselect.py \
+              $(abs_top_srcdir)/test/test_ctbin.py \
+              $(abs_top_srcdir)/test/test_ctlike.py \
+              $(abs_top_srcdir)/test/test_cttsmap.py \
+              $(abs_top_srcdir)/test/test_ctmodel.py \
+              $(abs_top_srcdir)/test/test_ctskymap.py \
+              $(abs_top_srcdir)/test/test_ctexpcube.py \
+              $(abs_top_srcdir)/test/test_ctpsfcube.py \
+              $(abs_top_srcdir)/test/test_ctbkgcube.py \
+              $(abs_top_srcdir)/test/test_ctcubemask.py \
+              $(abs_top_srcdir)/test/test_ctbutterfly.py \
+              $(abs_top_srcdir)/test/test_ctulimit.py \
+              $(abs_top_srcdir)/test/test_cterror.py \
+              $(abs_top_srcdir)/test/test_pipelines.py
+testdata    = $(abs_top_srcdir)/test/data/crab.xml \
+              $(abs_top_srcdir)/test/data/crab_events.fits.gz \
+              $(abs_top_srcdir)/test/data/crab_cntmap.fits.gz \
+              $(abs_top_srcdir)/test/data/exclusion.reg
+testirf     = $(abs_top_srcdir)/test/irf/cta_dummy_irf.dat
 
 # Distribute scripts
-EXTRA_DIST       = $(testscripts)
+EXTRA_DIST       = $(testscripts) $(testdata) $(testirf)
 testscriptsdir   = $(pythondir)/ctools/tests
 testscripts_DATA = $(testscripts)
+testdatadir      = $(pythondir)/ctools/tests/data
+testdata_DATA    = $(testdata)
+testirfdir       = $(pythondir)/ctools/tests/irf
+testirf_DATA     = $(testirf)
 
 # Set SWIG interface filename
 SWIG_INTERFACE = ctools/tools.i
